@@ -19,6 +19,7 @@ gui.verboseErrorDialog=true
 s3service.end-point-host=s3.amazonaws.com
 s3service.https-only=true
 s3service.max-thread-count=4
+s3service.admin-max-thread-count=4
 s3service.stream-retry-buffer-size=131072
 s3service.internal-error-retry-max=5
 
